--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,32 @@
+sudo: false
+
+language: python
+
+matrix:
+ include:
+  - python: 2.7
+    env: TOXENV=py27
+  - python: 3.5
+    env: TOXENV=py35
+  - python: 3.5
+    env: TOXENV=quality
+  - python: 3.6
+    env: TOXENV=py36
+
+cache:
+  - pip
+
+install:
+  - pip install -U pip wheel codecov
+  - make requirements
+
+script:
+  - make test
+
+after_success:
+  - "Done"
+
+
 deploy:
   provider: pypi
   user: archerysec
