--- a/.travis.yml
+++ b/.travis.yml
@@ -6,19 +6,12 @@ matrix:
  include:
   - python: 2.7
     env: TOXENV=py27
-  - python: 3.5
-    env: TOXENV=py35
-  - python: 3.5
-    env: TOXENV=quality
-  - python: 3.6
-    env: TOXENV=py36
 
 cache:
   - pip
 
 install:
-  - pip install -U pip wheel codecov
-  - make requirements
+  - pip install -U pip wheel archerysec-cli
 
 script:
   - make test
