--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-certifi
-chardet
-Click
-idna
-pyArchery
-requests
-urllib3
+boto3==1.17.57
+botocore==1.20.57
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+docker==5.0.0
+idna==2.10
+jmespath==0.10.0
+python-dateutil==2.8.1
+PyYAML==5.4.1
+requests==2.25.1
+s3transfer==0.4.2
+six==1.15.0
+urllib3==1.26.4
+websocket-client==0.58.0
+wget==3.2
