--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,12 @@ boto3==1.17.57
 botocore==1.20.57
 certifi==2020.12.5
 chardet==4.0.0
-click==7.1.2
+click
 docker==5.0.0
 idna==2.10
 jmespath==0.10.0
 python-dateutil==2.8.1
-PyYAML==5.4.1
+PyYAML
 requests==2.25.1
 s3transfer==0.4.2
 six==1.15.0
